Fix uneven focus border issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -121,7 +121,6 @@
   .cell {
     border: 1px solid transparent;
     height: 40px;
-    line-height: 40px;
     padding: 0 5px;
     text-align: center;
     vertical-align: middle;
